syntax = "proto3";

import "google/protobuf/empty.proto";

service RobotServer {
    rpc SetServo(ServoRequest) returns (google.protobuf.Empty) {}
}

message ServoRequest {
    string robotId = 2;
    int64 angle = 1;
    int64 delay = 3;
}